--- a/loader.cfg
+++ b/loader.cfg
@@ -1,1 +1,1 @@
-image=ssp-docker-registry.codasip.com/free/distrib-ssp-seh1-free:0.2.0
+image=ssp-docker-registry.codasip.com/free/distrib-ssp-seh1-free:latest
